fix(invite): description doesn't overflow past 4 lines anymore

--- a/app/client/stylesheets/components/pu-invitetile.sass
+++ b/app/client/stylesheets/components/pu-invitetile.sass
@@ -74,6 +74,8 @@
         p
             font-size: 14px
             line-height: 1.6em
+            max-height: 70px
+            overflow: hidden
 
         .pu-list
            height: 78px
